[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/img/blood.png" type="Texture" id=1]
[ext_resource path="res://Assets/Objects/Enemy1/BloodyStream.gd" type="Script" id=2]

[node name="BloodyStream" type="CPUParticles2D"]
amount = 15
lifetime = 0.13
explosiveness = 1.0
texture = ExtResource( 1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 500.0
initial_velocity_random = 1.0
scale_amount = 0.3
scale_amount_random = 0.96
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.08
autostart = true

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_FadeTimer_timeout"]
